gnome-control-center (1:3.18.0-0blankon1) tambora; urgency=medium

  * New upstream release

 -- mhy <dotovr@mhy>  Thu, 01 Oct 2015 00:04:23 +0700

gnome-control-center (1:3.17.92-1) experimental; urgency=medium

  [ Josselin Mouette ]
  * Remove Debian menu entry.

  [ Andreas Henriksson ]
  * New upstream release candidate.
  * Update build-dependencies according to configure.ac changes:
    - bump gnome-bluetooth >= 3.17.90
    - bump gnome-desktop >= 3.17.4
  * Update debian/patches/debian-uses-ssh-service.patch

 -- Andreas Henriksson <andreas@fatal.se>  Wed, 16 Sep 2015 17:22:36 +0200

gnome-control-center (1:3.16.3-1) unstable; urgency=medium

  [ Andreas Henriksson ]
  * Add debian/patches/debian-uses-ssh-service.patch
    - look for ssh.service (rathen than sshd.service) to make
      Remote Login show up under sharing panel.

  [ Michael Biebl ]
  * New upstream release.
  * Drop clean-la.mk include from debian/rules, the package no longer ships
    any libtool .la files.
  * Drop obsolete Breaks/Replaces from pre-wheezy and the no longer used
    Conflicts/Replaces/Provides: capplet-data.
  * Bump debhelper compatibility level to 9.

 -- Michael Biebl <biebl@debian.org>  Wed, 22 Jul 2015 21:00:37 +0200

gnome-control-center (1:3.16.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 14 Jun 2015 13:44:52 +0200

gnome-control-center (1:3.16.2-1) experimental; urgency=medium

  * New upstream release.
  * Update build-dependencies according to configure.ac changes:
    - Bump libaccountsservice-dev to >= 0.6.39
    - Bump gsettings-desktop-schemas-dev to >= 3.15.4
    - Bump libgoa-1.0-dev to >= 3.15.1
    - Bump libgtk-3-dev to >= 3.15.0
    - Bump gsettings-desktop-schemas to >= 3.15.4
    - Add libgudev-1.0-dev [linux-any]
  * gnome-control-center: install new appdata file

 -- Andreas Henriksson <andreas@fatal.se>  Thu, 11 Jun 2015 15:51:24 +0200
